<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".OrderDonutsActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/DonutFlavorString"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addDonuts"
        android:layout_width="285dp"
        android:layout_height="71dp"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/style_circular_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/OrderDonutAddString"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/removeDonuts"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="373dp"
        android:layout_height="211dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/OrderDonutsPicString"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@drawable/yeastdonuts" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/OrderDonutSubtotalString"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/subtotalText2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="218dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/coiny"
        android:text="@string/DonutPriceString"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtotalText2"
        android:layout_width="140dp"
        android:layout_height="77dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="33dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/addDonuts"
        app:layout_constraintStart_toEndOf="@+id/spinner2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/DonutQuantityString"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/quantity1"
        app:layout_constraintBottom_toTopOf="@+id/addDonuts"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/removeDonuts"
        android:layout_width="268dp"
        android:layout_height="62dp"
        android:layout_marginStart="71dp"
        android:layout_marginBottom="31dp"
        android:background="@color/grayish1"
        android:text="@string/RemoveDonutsString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="148dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="40dp"
        android:entries="@array/flavors"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>